--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "serve-favicon": "^2.4.5",
     "webpack": "^3.11.0"
   }
 }
